--- a/mockupstart.html
+++ b/mockupstart.html
@@ -10,35 +10,56 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg aoh-navbar">
-      <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <header class="aoh-hero">
+    <nav class="navbar navbar-expand-lg navbar-dark aoh-navbar">
+      <a class="navbar-brand" href="#"><img src="./mockup-assets/aoh-logo.png" alt="allt om havet-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto aoh-navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Hamnar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Om oss</a>
           </li>
         </ul>
-        <span class="navbar-text">
-          Navbar text with an inline element
-        </span>
+        <button class="aoh-btn-outline">
+          Boka hamnplats
+        </button>
       </div>
     </nav>
-    <h1>göta hamn</h1>
-    <h2>Din kajplats i etern</h2>
-    <h3>Västerås län</h3>
-    <h4>Faciliteter</h4>
-    <h5>Faciliteter</h5>
-    <h6>Faciliteter</h6>
-    <p>I think the only card she has is the Lorem card.</p>
+    <div class="jumbotron aoh-jumbotron">
+      <div class="container aoh-hero-cta">
+        <h2 class="aoh-hero-heading">Sover du också på lektionstid?</h2>
+        <p class="aoh-hero-preamble">Boka en hamnplats hos oss istället.</p>
+        <button class="aoh-btn-solid">Hitta hamnplats</button>
+      </div>
+    </div>
+  </header>
+
+  <section class="container">
+    <div class="row">
+      <article class="col-sm-8">
+        123
+      </article>
+      <article class="col-sm-4">
+        123
+      </article>
+    </div>
+  </section>
+
+  <h1>göta hamn</h1>
+  <h2>Din kajplats i etern</h2>
+  <h3>Västerås län</h3>
+  <h4>Faciliteter</h4>
+  <h5>Faciliteter</h5>
+  <h6>Faciliteter</h6>
+  <p>I think the only card she has is the Lorem card.</p>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
