--- a/mockupstart.html
+++ b/mockupstart.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no" />
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
     </nav>
     <div class="jumbotron aoh-jumbotron">
       <div class="container aoh-hero-cta">
-        <h2 class="aoh-hero-heading">Sover du också på lektionstid?</h2>
+        <h1 class="aoh-hero-heading">Sover du också på lektionstid?</h1>
         <p class="aoh-hero-preamble">Boka en hamnplats hos oss istället.</p>
         <button class="aoh-btn-solid">Hitta hamnplats</button>
       </div>
@@ -44,22 +45,119 @@
 
   <section class="container">
     <div class="row">
-      <article class="col-sm-8">
-        123
+      <article class="col-sm-8 mt-5">
+        <h2>Sveriges gästhamnar - samlat på ett ställe</h2>
+
+        <hr class="aoh-hr">
+
+        <p>Allt Om Havet innehåller uppgifter om samtliga gästhamnar som erbjuder platser för besökande, i dagsläget cirka 590
+        hamnar.</p>
+
+        <p>Här kan Du som användare finna de uppgifter som kan vara av intresse innan ni besöker hamnen. Bland annat kan Ni finna
+        om det finns bränsle, livsmedel, läkare, bank, dusch eller systembolag i aktuell hamn.</p>
+
+        <p>Totalt finns det över 30 viktiga uppgifter att finna på varje hamn. Sjöräddningssällskapets samtliga räddningsstationer
+        finns angivna för de områden där de är verksamma, något som i vissa situationer kan vara direkt livsavgörande.</p>
+
+        <p>Vi har även sammanställt uppgifter om sevärdheter i och omkring hamnarna. Dessa uppgifter samlar vi in årligen från
+        hamncheferna, kommunerna samt de lokala turistbyråerna.</p>
       </article>
-      <article class="col-sm-4">
-        123
+
+      <article class="col-sm-4 mt-5">
+        <div class="aoh-event-box aoh-box-lightblue">
+          <h4>Event</h4>
+          <ul>
+            <li class="aoh-list-no-bullet">
+              <span>24-03-2020</span>
+              <span>Barbados</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>26-03-2020</span>
+              <span>Wisex</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>27-03-2020</span>
+              <span>Black Ingvars</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>29-03-2020</span>
+              <span>Tipspromenad</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>30-03-2020</span>
+              <span>Säsongsöppning</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>01-04-2020</span>
+              <span>Linus Flat Earth Trio</span>
+              <span>Waxholm</span>
+            </li>
+            <li class="aoh-list-no-bullet">
+              <span>05-04-2020</span>
+              <span>Megadeth</span>
+              <span>Waxholm</span>
+            </li>
+          </ul>
+        </div>
       </article>
+    </div>
+
+    <div class="row mt-5">
+      <article class="col-sm-12">
+        <h3 class="mb-4">Galleri</h3>
+      </article>
+    
+      <article class="aoh-map-placeholder col-sm-12">GALLERI</article>
+    </div>
+
+    <div class="row mt-5">
+      <article class="col-sm-12">
+        <h3 class="mb-4">Populäraste hamnarna 2020</h3>
+      </article>
+
+      <article class="col-sm-12">
+        <ul class="p-5 d-flex flex-wrap justify-content-around aoh-box-lightblue">
+          <li class="d-flex flex-column align-items-center aoh-list-no-bullet">
+            <img src="./mockup-assets/sailing.png" alt="sailing">
+            <h6>Trosa gästhamn - Sörmland</h6>
+            <p>Betyg: &#9733;&#9733;&#9733;&#9733;&#9733;</p>
+          </li>
+          <li class="d-flex flex-column align-items-center aoh-list-no-bullet">
+            <img src="./mockup-assets/sailing.png" alt="sailing">
+            <h6>Trosa gästhamn - Sörmland</h6>
+            <p>Betyg: &#9733;&#9733;&#9733;&#9733;&#9734;</p>
+          </li>
+          <li class="d-flex flex-column align-items-center aoh-list-no-bullet">
+            <img src="./mockup-assets/sailing.png" alt="sailing">
+            <h6>Trosa gästhamn - Sörmland</h6>
+            <p>Betyg: &#9733;&#9733;&#9734;&#9734;&#9734;</p>
+          </li>
+        </ul>
+      </article>
+    </div>
+
+    <div class="row mt-5">
+      <article class="col-sm-12">
+        <h3 class="mb-4">En karta för väderprognos i Sverige</h3>
+      </article>
+    
+      <article class="aoh-map-placeholder col-sm-12">KARTA</article>
     </div>
   </section>
 
-  <h1>göta hamn</h1>
-  <h2>Din kajplats i etern</h2>
-  <h3>Västerås län</h3>
-  <h4>Faciliteter</h4>
-  <h5>Faciliteter</h5>
-  <h6>Faciliteter</h6>
-  <p>I think the only card she has is the Lorem card.</p>
+  <footer class="d-flex flex-wrap justify-content-between aoh-footer">
+    <img class="pl-4 aoh-footer-logo" src="./mockup-assets/aoh-logo.png" alt="allt om havet-logo">
+    <div></div>
+    <div class="col-lg-4 d-flex justify-content-around p-4">
+      <span class="aoh-text-white">info@alltomhavet.se</span>
+      <span class="aoh-text-white">0746-24 31 42</span>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
