--- a/mockupstart.html
+++ b/mockupstart.html
@@ -64,43 +64,57 @@
       </article>
 
       <article class="col-sm-4 mt-5">
-        <div class="aoh-event-box aoh-box-lightblue">
+        <div class="p-4 aoh-event-box aoh-box-lightblue">
           <h4>Event</h4>
-          <ul>
-            <li class="aoh-list-no-bullet">
+          <ul class="p-0">
+            <li class="d-flex aoh-list-no-bullet">
               <span>24-03-2020</span>
-              <span>Barbados</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Barbados</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>26-03-2020</span>
-              <span>Wisex</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Wisex</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>27-03-2020</span>
-              <span>Black Ingvars</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Black Ingvars</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>29-03-2020</span>
-              <span>Tipspromenad</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Tipspromenad</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>30-03-2020</span>
-              <span>Säsongsöppning</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Säsongsöppning</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>01-04-2020</span>
-              <span>Linus Flat Earth Trio</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Linus Flat Earth Trio</span>
+                <span>Waxholm</span>
+              </div>
             </li>
-            <li class="aoh-list-no-bullet">
+            <li class="d-flex aoh-list-no-bullet">
               <span>05-04-2020</span>
-              <span>Megadeth</span>
-              <span>Waxholm</span>
+              <div class="ml-3 d-flex flex-column flex-wrap">
+                <span>Megadeth</span>
+                <span>Waxholm</span>
+              </div>
             </li>
           </ul>
         </div>
@@ -112,7 +126,20 @@
         <h3 class="mb-4">Galleri</h3>
       </article>
     
-      <article class="aoh-map-placeholder col-sm-12">GALLERI</article>
+      <article class="col-sm-12 row">
+        <figure class="col-sm-4 aoh-media">
+          <img src="./mockup-assets/segeljavel.png" alt="">
+          <figcaption>Segeljävel</figcaption>
+        </figure>
+        <figure class="col-sm-4 aoh-media">
+          <img src="./mockup-assets/batjavel.png" alt=""> 
+          <figcaption>Båtjävel</figcaption>
+        </figure>
+        <figure class="col-sm-4 aoh-media">
+          <img src="./mockup-assets/fyrjavel.png" alt=""> 
+          <figcaption>Fyrjävel</figcaption>
+        </figure>
+      </article>
     </div>
 
     <div class="row mt-5">
