add harbor mockup

--- a/mockupstart.html
+++ b/mockupstart.html
@@ -121,28 +121,28 @@
       </article>
     </div>
 
-    <div class="row mt-5">
+    <div class="d-sm-flex flex-sm-column align-items-sm-center mt-5">
       <article class="col-sm-12">
         <h3 class="mb-4">Galleri</h3>
       </article>
     
-      <article class="col-sm-12 row">
-        <figure class="col-sm-4 aoh-media">
-          <img src="./mockup-assets/segeljavel.png" alt="">
+      <article class="m-0 col-sm-12 row">
+        <figure class="p-0 col-sm-4 d-flex flex-column align-items-center aoh-media">
+          <img class="img-fluid" src="./mockup-assets/segeljavel.png" alt="">
           <figcaption>Segeljävel</figcaption>
         </figure>
-        <figure class="col-sm-4 aoh-media">
-          <img src="./mockup-assets/batjavel.png" alt=""> 
+        <figure class="p-0 col-sm-4 d-flex flex-column align-items-center aoh-media">
+          <img class="img-fluid" src="./mockup-assets/batjavel.png" alt=""> 
           <figcaption>Båtjävel</figcaption>
         </figure>
-        <figure class="col-sm-4 aoh-media">
-          <img src="./mockup-assets/fyrjavel.png" alt=""> 
+        <figure class="p-0 col-sm-4 d-flex flex-column align-items-center aoh-media">
+          <img class="img-fluid" src="./mockup-assets/fyrjavel.png" alt=""> 
           <figcaption>Fyrjävel</figcaption>
         </figure>
       </article>
     </div>
 
-    <div class="row mt-5">
+    <div class="mt-5">
       <article class="col-sm-12">
         <h3 class="mb-4">Populäraste hamnarna 2020</h3>
       </article>
