further templating and styling harbor page

--- a/mockuphamn.html
+++ b/mockuphamn.html
@@ -39,7 +39,7 @@
 
   <section class="container aoh-main-container">
     <div class="row aoh-harbor-heading">
-      <div class="col-sm-9 d-flex align-items-end">
+      <div class="col-sm-9 d-sm-flex align-items-end">
         <h1>Göta hamn</h1>
         <h3>Västmanlands län</h3>
       </div>
@@ -49,6 +49,92 @@
       </div>
     </div>
     
+    <hr>
+
+    <p>
+      <button class="btn aoh-btn-solid d-md-none" type="button" data-toggle="collapse" data-target="#info-collapse" aria-expanded="false" aria-controls="info-collapse">Info</button>
+    </p>
+    <div class="collapse" id="info-collapse">
+      <div class="d-flex flex-wrap">
+        <p class="mr-3"><strong>Adress:</strong> Flippargatan 45, 243 65 Hängelby</p>
+        <p class="mr-3"><strong>Läge:</strong> 5832 N 1502 E</p>
+        <p class="mr-3"><strong>Sjökort:</strong> 121, 122:6, 7</p>
+        <p class="mr-3"><strong>Tel:</strong> 036-35 43 12</p>
+        <p class="mr-3"><strong>E-post:</strong> gota@hamn.se</p>
+        <p class="mr-3"><strong>Hamndjup:</strong> 3-3,5 m</p>
+        <p class="mr-3"><strong>Gästplatser:</strong> 60 st</p>
+        <p class="mr-3"><strong>Förtöjning:</strong> bom/boj/långsides</p>
+        <p class="mr-3"><strong>Hamnavgift:</strong> 200 kr</p>
+      </div>
+    </div>
+    <div class="d-none d-md-flex flex-wrap">
+      <p class="mr-3"><strong>Adress:</strong> Flippargatan 45, 243 65 Hängelby</p>
+      <p class="mr-3"><strong>Läge:</strong> 5832 N 1502 E</p>
+      <p class="mr-3"><strong>Sjökort:</strong> 121, 122:6, 7</p>
+      <p class="mr-3"><strong>Tel:</strong> 036-35 43 12</p>
+      <p class="mr-3"><strong>E-post:</strong> gota@hamn.se</p>
+      <p class="mr-3"><strong>Hamndjup:</strong> 3-3,5 m</p>
+      <p class="mr-3"><strong>Gästplatser:</strong> 60 st</p>
+      <p class="mr-3"><strong>Förtöjning:</strong> bom/boj/långsides</p>
+      <p class="mr-3"><strong>Hamnavgift:</strong> 200 kr</p>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-8">
+        <img class="img-fluid" src="./mockup-assets/gotahamn.png" alt="Göta Hamn">
+        <h2 class="mt-5">Din kajplats i etern</h2>
+        <p>I think the only card she has is the Lorem card. I will write some great placeholder text – and nobody writes better
+        placeholder text than me, believe me – and I’ll write it very inexpensively. I will write some great, great text on your
+        website’s Southern border, and I will make Google pay for that text. Mark my words. You could see there was text coming
+        out of her eyes, text coming out of her wherever.</p>
+        <p>Some people have an ability to write placeholder text... It's an art you're basically born with. You either have it or
+        you don't. I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I can't do
+        it. I just can't do it. It's inappropriate.</p>
+        <p>Some people have an ability to write placeholder text... It's an art you're basically born with. You either have it or
+        you don't. I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I can't do
+        it. I just can't do it. It's inappropriate.</p>
+      </div>
+      <div class="col-sm-4">
+        <div class="p-4 aoh-event-box aoh-box-lightblue">
+          <h4>Faciliteter</h4>
+          <ul class="pl-0 d-flex flex-column flex-wrap aoh-list-no-bullet aoh-checklist">
+            <li class="aoh-listitem-checked">Diesel</li>
+            <li class="aoh-listitem-unchecked">Bensin</li>
+            <li class="aoh-listitem-checked">Färskvatten</li>
+            <li class="aoh-listitem-unchecked">Toalett</li>
+            <li class="aoh-listitem-checked">Dusch</li>
+            <li class="aoh-listitem-unchecked">Bastu</li>
+            <li class="aoh-listitem-checked">Tvättstuga</li>
+            <li class="aoh-listitem-unchecked">Internet</li>
+            <li class="aoh-listitem-checked">Eluttag</li>
+            <li class="aoh-listitem-unchecked">Trailerramp</li>
+            <li class="aoh-listitem-checked">Miljöstation</li>
+            <li class="aoh-listitem-unchecked">Latrinvask</li>
+            <li class="aoh-listitem-checked">Septiksug</li>
+            <li class="aoh-listitem-unchecked">Kran/Truck</li>
+            <li class="aoh-listitem-checked">Mastkran</li>
+            <li class="aoh-listitem-unchecked">Båtvarv</li>
+            <li class="aoh-listitem-checked">Motorservice</li>
+            <li class="aoh-listitem-unchecked">Restaurang</li>
+            <li class="aoh-listitem-checked">Badplats</li>
+            <li class="aoh-listitem-unchecked">Livsmedel</li>
+            <li class="aoh-listitem-checked">Handikappsanpassat</li>
+            <li class="aoh-listitem-unchecked">Vinteröppet</li>
+            <li class="aoh-listitem-checked">Ställplatser</li>
+            <li class="aoh-listitem-unchecked">Läkare</li>
+            <li class="aoh-listitem-unchecked">Tandläkare</li>
+            <li class="aoh-listitem-unchecked">Apotek</li>
+            <li class="aoh-listitem-unchecked">Veterinär</li>
+            <li class="aoh-listitem-unchecked">Turistbyrå</li>
+            <li class="aoh-listitem-unchecked">Buss/Tåg/Färja</li>
+          </ul>
+        </div>
+
+
+      </div>
+    </div>
+    
+
   </section>
 
   <footer class="d-flex flex-wrap justify-content-between aoh-footer">
